# FRCGazebo

./: .gitignore  README.md
Simbots/: dashboard.xml
Simbots/SimBot2016/: dashboard.xml  gzstop  simgui-window.json  simgui.json  start_dashboard  start_gazebo
Simbots/SimBot2016/worlds/: 2016-All.world  2016-Robot-field.world  2016-Robot.world  temp.world
Simbots/SimBot2017/: build.gradle  dashboard.xml  gzstart  simgui-window.json  simgui.json  start_gazebo
Simbots/SimBot2017/worlds/: FRC2017-center.world  FRC2017-left.world  FRC2017-right.world  FRC2017.world
Simbots/SimBot2018/: TEMP.WORLD  build.gradle  dashboard.xml  gzstart  simgui-window.json  simgui.json  simulate  start_gazebo
Simbots/SimBot2018/worlds/: center.world  right.world  test.world
Simbots/SimBot2019/: dashboard.xml  simgui-window.json  simgui.json  start_gazebo
Simbots/SimBot2019/worlds/: FRC2019.world  notilt.world  robot_only.world  temp.world  tilted.world  with_hatch.world
Simbots/SimBot2022/: build.gradle  dashboard.xml  gzrun  gzstart  simball.grip  simgui.json  simtarget.grip  start_gazebo  switchedcameras.xml
Simbots/SimBot2022/PathWeaver/: pathweaver.json
Simbots/SimBot2022/videos/: front_0.avi
Simbots/SimBot2022/worlds/: simbot-2022-climber.world  simbot-2022-field-3ball.world  simbot-2022-field.world  simbot-empty-field.world
Simbots/SimBot2024/: build.gradle  dashboard.xml  start_gazebo
Simbots/SimBot2024/.wpilib/: wpilib_preferences.json
Simbots/SimBot2024/worlds/: 2024Field-center.world  2024Field-left.world  2024Field-right.world  2024Field-trap.world  2024Field.world
Simbots/SimBot2025/: build.gradle  start_gazebo
Simbots/SimBot2025/worlds/: Barge.world  Borders.world  Carpet.world  Field.world  temp.xml
Simbots/SimSwerve/: dashboard.xml  simgui.json  start_gazebo
Simbots/SimSwerve/worlds/: simswervebot-empty-field.world  simswervebot-with-perim-tags-2.world  simswervebot-with-single-tag.world
Simbots/SimWaffle/: build.gradle  build_jars  dashboard.xml  gzrun  shuffleboard.json  start_gazebo
Simbots/SimWaffle/.OutlineViewer/: outlineviewer.json
Simbots/SimWaffle/worlds/: simswervebot-with-field-tags.world  simswervebot-with-perim-tags-1.world
Simbots/Simbot2023/: build.gradle  build.gradle.test  dashboard.xml  gradlew  path.txt  simgui.json  simulate  start_gazebo
Simbots/Simbot2023/.OutlineViewer/: outlineviewer.json
Simbots/Simbot2023/.pathplanner/: settings.json
Simbots/Simbot2023/worlds/: onearm.world  simbot-empty-field.world  simcompbot-2023-field.world  simcompbot-cube.world
docs/: GazeboSolidworksInstaller.txt  base-env.txt  bashrc.txt  build-notes-frc-plugins.txt  build-notes-gazebo.txt  build-notes-tester-laptop.txt  misc-problems.txt  package-list-11-12-gazebo.txt  package-list-11-9-gazebo.txt  tester-projects.txt
gzsim/: build.gradle
gzsim/PlotServer/: BuildNotes.txt
gzsim/c++/: build_camera  build_plugins  build_program  clean_camera  clean_program  ffmpeg_test  gzrun  start_gazebo  start_program
gzsim/c++/camera/: CMakeLists.txt  sim_camera.cpp  sim_camera.h
gzsim/c++/plugins/: CMakeLists.txt  camera_dump.cc  sim_camera.cpp  sim_camera.h  sim_clock.cpp  sim_clock.h  sim_contact.cpp  sim_contact.h  sim_encoder.cpp  sim_encoder.h  sim_gyro.cpp  sim_gyro.h  sim_limitswitch.cpp  sim_limitswitch.h  sim_motor.cpp  sim_motor.h  sim_piston.cpp  sim_piston.h  sim_rangefinder.cpp  sim_rangefinder.h
gzsim/c++/program/: CMakeLists.txt
gzsim/c++/src/: GzCamera.cpp  GzCamera.h  GzClock.cpp  GzClock.h  GzContact.cpp  (+17 more)
gzsim/c++/tests/: CMakeLists.txt  MjpegTest.cpp  PluginTest.cpp  build_test  test_program
models/2017field/: model.config
models/2022-Field/: model.config
models/2022-Field-Border/: model.config
models/Apriltag16_05_00000/: model.sdf
models/Apriltag16_05_00001/: model.sdf
models/Apriltag16_05_00002/: model.sdf
models/Apriltag16_05_00003/: model.sdf
models/Apriltag16_05_00004/: model.sdf
models/Apriltag16_05_00005/: model.sdf
models/Apriltag16_05_00006/: model.sdf
models/Apriltag16_05_00007/: model.sdf
models/Apriltag16_05_00008/: model.sdf
models/Apriltag36_11_00000/: model.sdf
models/Apriltag36_11_00001/: model.sdf
models/BlueBall/: model.config
models/BlueHanger/: model.config
models/Hanger/: model.config
models/Platform/: model.config
models/RedHanger/: model.config
models/SimBot2022/: model.config
models/SimBot2022-2/: SimBot2022-2-org.sdf  model.config
models/SimCompBot/: model.config
models/SimSwerveBot3/: model.config
models/SimSwerveBot4/: model.config
models/SimSwerveBotSqr/: model.config
models/Switch/: model.config
models/TapeRing/: model.config
models/YellowCone/: model.config
vision/apriltag/: CMakeLists.txt  build_all  build_gnu  build_jnihdr  clean_all  jnitest  tagtest
vision/apriltag/apriltag_src/: apriltag.c
vision/apriltag/common/: time_util.c
vision/apriltag/frc/robot/objects/: TagResult.java
vision/apriltag/include/: TagDetector.h  apriltag_jni_TagDetectorJNI.h  utils_TagDetectorJNI.h
vision/apriltag/include/common/: timeprofile.h
vision/apriltag/jni/: TagDetectorJNI.java  TagResult.java
vision/apriltag/lib/pkgconfig/: apriltag.pc
vision/apriltag/native/: TagDetector.cpp  TagDetectorJNI.cpp
vision/apriltag/test/tagtest/: Makefile  build_all  runtest  test.c
worlds/: 2022field.world  FRC2018.world  SimCompBot.world  simbot-2022-field.world  simbot-empty-field.world  simcompbot-2023-field.world  simcompbot-cone.world  simcompbot-empty-field.world  simswervebot-2023-field.world  simswervebot-3.world  simswervebot-empty-field.world  simswervebot-with-front-tags.world  simswervebot-with-single-tag.world  simswervebot-with-tags.world  tank8-2018-field.world  tank8-2022-field.world  tank8-empty-field.world
wpilib/libs/: apriltag.exp  apriltag.lib  cameraserver.lib  cscore.lib  ntcore.lib  opencv_calib3d452.lib  opencv_core452.lib  opencv_features2d452.lib  opencv_imgcodecs452.lib  opencv_imgproc452.lib  opencv_java452.lib  opencv_objdetect452.lib  opencv_photo452.lib  opencv_stitching452.lib  opencv_video452.lib  wpiutil.lib
(+830 files in other folders)
